[gd_scene load_steps=2 format=3 uid="uid://dr0id8m3t5vlf"]

[ext_resource type="Script" path="res://store_ui.gd" id="1_o3i6k"]

[node name="StoreUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o3i6k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="ItemSlotHBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RerollButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Reroll (1g)
"

[node name="ExitButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
text = "Exit"

[node name="BuyDieButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Buy Die (6g)"
